--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a><div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-items"><a class="nav-link active" href="index.html"><span class="fa fa-home"></span> Home</a></li>
-                    <li class="nav-items"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info"></span> About</a></li>
+                    <li class="nav-items"><a class="nav-link" href="#"><span class="fa fa-info"></span> About</a></li>
                     <li class="nav-items"><a class="nav-link" href="#"><span class="fa fa-list"></span> Menu</a></li>
                     <li class="nav-items"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card"></span> Contact</a></li>
                 </ul>
@@ -218,14 +218,14 @@
         </div>
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3 order-md-last">
-                <h3>Our Lipsmacking Culinary Creations</h3>
+                <h3>Our Mouthwatery Creations</h3>
             </div>
             <div class="col col-sm col-md order-md-first">
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Paneer Pizza<span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <h2 class="mt-0">Paneer Pizza<span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">₹499</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -257,12 +257,12 @@
 
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Meet our Culinary Specialists</h3>
+                <h3>Meet our Specialists</h3>
             </div>
             <div class="col-12 order-sm-first col-sm"> 
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
-                            src="img/alberto.png" alt="Alberto Somayya">
+                            src="img/alberto.png" alt="Walter White">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto</h2>
                         <h4>Executive Chef</h4>
@@ -285,7 +285,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a class="link-color" href="./index.html">Home</a></li>
-                        <li><a class="link-color" href="./aboutus.html">About</a></li>
+                        <li><a class="link-color" href="#">About</a></li>
                         <li><a class="link-color" href="#">Menu</a></li>
                         <li><a class="link-color" href="./contactus.html">Contact</a></li>
                     </ul>
@@ -293,9 +293,9 @@
                 <div class="col-7 col-sm-5 address">
                     <h5>Our Address</h5>
                     <address>
-		              #404 Siri Gardenia<br>
-		              Clear Water Bay, Kowloon<br>
-		              INDIA<br>
+		              #404 Siri Garden<br>
+		              Banashankari, Bangalore<br>
+		              India<br>
                       <i class="fa fa-phone fa-lg"></i> +123 456 7890<br>
 		              <i class="fa fa-fax fa-lg"></i>Fax: +098 765 4321<br>
 		              <i class="fa fa-envelope fa-lg"></i>Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
