--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <img class="d-block img-fluid"
                                 src="img/uthappizza.png" alt="Uthappizza">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Paneer Pizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                                <h2>Paneer Pizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">₹499</span></h2>
                                 <p class="d-none d-sm-block">A unique combination of Indian (pancake) and
                                     Italian pizza, topped with Cerignola olives, ripe vine
                                     cherry tomatoes, Vidalia onion, Guntur chillies and
