--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- endbuild -->
 
 <head>
-    <title>Ristorante Con Fusion</title>
+    <title>Ristorante</title>
 </head>
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
-                    <h1>Ristorante con Fusion</h1>
+                    <h1>Ristorante</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm align-self-center">
@@ -264,7 +264,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/alberto.png" alt="Walter White">
                     <div class="media-body">
-                        <h2 class="mt-0">Alberto</h2>
+                        <h2 class="mt-0">Walter White</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
                             International experience having worked closely with
