--- a/contactus.html
+++ b/contactus.html
@@ -172,8 +172,8 @@
                     <h5>Our Address</h5>
                     <address>
                         #404 Siri Gardenia<br>
-                        Clear Water Bay, Kowloon<br>
-                        INDIA<br>
+                        Bangalore<br>
+                        India<br>
                         <i class="fa fa-phone fa-lg"></i> +123 456 7890<br>
                         <i class="fa fa-fax fa-lg"></i>Fax: +098 765 4321<br>
                         <i class="fa fa-envelope fa-lg"></i>Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
